Refactor : 피드 운동일지 totalPage 추가, 운동일지 상세보기 dto 변수명 변경, 피드 운동일지 스크랩 취소 추가
### 피드 운동일지 totalPage 추가

### 운동일지 상세보기 dto 변수명 프론트와 통합

### 피드 운동일지 스크랩 취소 추가